--- a/web-general/requirements.txt
+++ b/web-general/requirements.txt
@@ -1,5 +1,5 @@
 app==0.0.1
-attrs==19.3.0
+attrs
 Automat==20.2.0
 base58check==1.0.2
 bcrypt==3.1.7
@@ -30,7 +30,7 @@ goose3==3.1.6
 htmldate==0.7.3
 hyperlink==20.0.1
 idna==2.10
-incremental==17.5.0
+incremental
 itemadapter==0.1.0
 itemloaders==1.0.2
 itsdangerous==1.1.0
@@ -52,7 +52,7 @@ paramiko==2.7.1
 parsel==1.6.0
 pathy==0.6.1
 Pillow==7.2.0
-pony==0.7.14
+pony==0.7.17
 preshed==3.0.6
 pretty==0.1
 Protego==0.1.16
@@ -97,9 +97,9 @@ thinc==8.0.13
 threadpoolctl==2.1.0
 timeout-decorator==0.4.1
 tqdm==4.61.2
-Twisted==20.3.0
+Twisted==24.3.0
 typer==0.4.0
-typing_extensions==4.0.1
+typing_extensions
 urllib3==1.26.2
 w3lib==1.22.0
 wasabi==0.8.2
