--- a/built-images/docker-compose.yml
+++ b/built-images/docker-compose.yml
@@ -33,7 +33,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./data/elasticsearch1:/var/lib/elasticsearch/data
+      - ./data/elasticsearch1:/var/lib/elasticsearch/data:rw
       - ./elk-certs:$ELK_CERTS_DIR
     ports:
       - "127.0.0.1:9201:9200"
@@ -69,7 +69,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./data/elasticsearch2:/var/lib/elasticsearch/data
+      - ./data/elasticsearch2:/var/lib/elasticsearch/data:rw
       - ./elk-certs:$ELK_CERTS_DIR
     # ports:
     #   - "127.0.0.1:9201:9200"
@@ -104,7 +104,7 @@ services:
     ports:
       - "127.0.0.1:3307:3306"
     volumes:
-      - ./data/mysqldb:/var/lib/mysql
+      - ./data/mysqldb:/var/lib/mysql:rw
     container_name: "darkweb-search-engine-db"
 
 #   crawler:
