modified:   docker-compose.yml 	modified:   web-general/app.py 	modified:   web-general/requirements.txt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,31 +4,31 @@ services:
   elasticsearch1:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
     environment:
-     - cluster.name=docker-cluster
-     - node.name=elasticsearch1
-     - "ES_JAVA_OPTS=-Xmx4g -Xms4g"
-    #  - ELASTIC_PASSWORD=reZeP6crgHBGVsKeAFyWnduTzcwyB4qR
-    #  - xpack.monitoring.collection.enabled=true
-    #  - xpack.monitoring.exporters.remote.type=http
-    #  - xpack.monitoring.exporters.remote.host=monitor
-     - discovery.seed_hosts=elasticsearch1,elasticsearch2
-     - cluster.initial_master_nodes=elasticsearch1,elasticsearch2
-    #  - xpack.license.self_generated.type=basic
-    #  - xpack.security.enabled=true
-    #  - xpack.security.http.ssl.enabled=true
-    #  - xpack.security.http.ssl.key=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.key
-    #  - xpack.security.http.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
-    #  - xpack.security.http.ssl.certificate=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.crt
-    #  - xpack.security.transport.ssl.enabled=true
-    #  - xpack.security.transport.ssl.verification_mode=certificate
-    #  - xpack.security.transport.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
-    #  - xpack.security.transport.ssl.certificate=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.crt
-    #  - xpack.security.transport.ssl.key=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.key
-     - indices.query.bool.max_clause_count=10240
-#    ulimits:
-#      memlock:
-#        soft: -1
-#        hard: -1
+      - cluster.name=docker-cluster
+      - node.name=elasticsearch1
+      - "ES_JAVA_OPTS=-Xmx4g -Xms4g"
+      #  - ELASTIC_PASSWORD=reZeP6crgHBGVsKeAFyWnduTzcwyB4qR
+      #  - xpack.monitoring.collection.enabled=true
+      #  - xpack.monitoring.exporters.remote.type=http
+      #  - xpack.monitoring.exporters.remote.host=monitor
+      - discovery.seed_hosts=elasticsearch1,elasticsearch2
+      - cluster.initial_master_nodes=elasticsearch1,elasticsearch2
+      #  - xpack.license.self_generated.type=basic
+      #  - xpack.security.enabled=true
+      #  - xpack.security.http.ssl.enabled=true
+      #  - xpack.security.http.ssl.key=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.key
+      #  - xpack.security.http.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
+      #  - xpack.security.http.ssl.certificate=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.crt
+      #  - xpack.security.transport.ssl.enabled=true
+      #  - xpack.security.transport.ssl.verification_mode=certificate
+      #  - xpack.security.transport.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
+      #  - xpack.security.transport.ssl.certificate=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.crt
+      #  - xpack.security.transport.ssl.key=$ELK_CERTS_DIR/elasticsearch1/elasticsearch1.key
+      - indices.query.bool.max_clause_count=10240
+    #    ulimits:
+    #      memlock:
+    #        soft: -1
+    #        hard: -1
     volumes:
       - .data/elasticsearch1:/var/lib/elasticsearch/data
       - ./elk-certs:$ELK_CERTS_DIR
@@ -39,37 +39,36 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
-
+        max-file: "10"
 
   elasticsearch2:
     image: docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
     environment:
-     - cluster.name=docker-cluster
-     - node.name=elasticsearch2
-     - "ES_JAVA_OPTS=-Xmx4g -Xms4g"
-    #  - ELASTIC_PASSWORD=reZeP6crgHBGVsKeAFyWnduTzcwyB4qR
-    #  - xpack.monitoring.collection.enabled=true
-    #  - xpack.monitoring.exporters.remote.type=http
-    #  - xpack.monitoring.exporters.remote.host=monitor
-     - discovery.seed_hosts=elasticsearch1,elasticsearch2
-     - cluster.initial_master_nodes=elasticsearch1,elasticsearch2
-    #  - xpack.license.self_generated.type=basic
-    #  - xpack.security.enabled=true
-    #  - xpack.security.http.ssl.enabled=true
-    #  - xpack.security.http.ssl.key=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.key
-    #  - xpack.security.http.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
-    #  - xpack.security.http.ssl.certificate=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.crt
-    #  - xpack.security.transport.ssl.enabled=true
-    #  - xpack.security.transport.ssl.verification_mode=certificate
-    #  - xpack.security.transport.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
-    #  - xpack.security.transport.ssl.certificate=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.crt
-    #  - xpack.security.transport.ssl.key=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.key
-     - indices.query.bool.max_clause_count=10240
-#    ulimits:
-#      memlock:
-#        soft: -1
-#        hard: -1
+      - cluster.name=docker-cluster
+      - node.name=elasticsearch2
+      - "ES_JAVA_OPTS=-Xmx4g -Xms4g"
+      #  - ELASTIC_PASSWORD=reZeP6crgHBGVsKeAFyWnduTzcwyB4qR
+      #  - xpack.monitoring.collection.enabled=true
+      #  - xpack.monitoring.exporters.remote.type=http
+      #  - xpack.monitoring.exporters.remote.host=monitor
+      - discovery.seed_hosts=elasticsearch1,elasticsearch2
+      - cluster.initial_master_nodes=elasticsearch1,elasticsearch2
+      #  - xpack.license.self_generated.type=basic
+      #  - xpack.security.enabled=true
+      #  - xpack.security.http.ssl.enabled=true
+      #  - xpack.security.http.ssl.key=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.key
+      #  - xpack.security.http.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
+      #  - xpack.security.http.ssl.certificate=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.crt
+      #  - xpack.security.transport.ssl.enabled=true
+      #  - xpack.security.transport.ssl.verification_mode=certificate
+      #  - xpack.security.transport.ssl.certificate_authorities=$ELK_CERTS_DIR/ca/ca.crt
+      #  - xpack.security.transport.ssl.certificate=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.crt
+      #  - xpack.security.transport.ssl.key=$ELK_CERTS_DIR/elasticsearch2/elasticsearch2.key
+      - indices.query.bool.max_clause_count=10240
+    #    ulimits:
+    #      memlock:
+    #        soft: -1
+    #        hard: -1
     volumes:
       - .data/elasticsearch2:/var/lib/elasticsearch/data
       - ./elk-certs:$ELK_CERTS_DIR
@@ -80,18 +79,18 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:${ELK_VERSION}
     environment:
-     - ELASTICSEARCH_URL=http://elasticsearch1:9200
-     - ELASTICSEARCH_HOSTS=http://elasticsearch1:9200
-     - NODE_OPTIONS="--max-old-space-size=8192"
-    #  - xpack.monitoring.ui.container.elasticsearch.enabled=true
-    #  - xpack.security.transport.ssl.verification_mode=certificate
-     - elasticsearch.requestTimeout=300000
-     - elasticsearch.startupTimeout=500000
+      - ELASTICSEARCH_URL=http://elasticsearch1:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch1:9200
+      - NODE_OPTIONS="--max-old-space-size=8192"
+      #  - xpack.monitoring.ui.container.elasticsearch.enabled=true
+      #  - xpack.security.transport.ssl.verification_mode=certificate
+      - elasticsearch.requestTimeout=300000
+      - elasticsearch.startupTimeout=500000
     #  - ELASTICSEARCH_USERNAME=
     #  - ELASTICSEARCH_PASSWORD=
     #  - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=$ELK_CERTS_DIR/ca/ca.crt
@@ -108,9 +107,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
-
-
+        max-file: "10"
 
   web-general:
     build: ./web-general
@@ -139,7 +136,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
 
   db:
     build: db
@@ -168,70 +165,74 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "toruser", "-ptorpass"]
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u",
+          "toruser",
+          "-ptorpass",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
 
+  #  web-general:
+  #    build: ./web-general  # Path to the Dockerfile for web-general
+  #    restart: always
+  #    ports:
+  #      - "0.0.0.0:7000:5000"
+  #    volumes:
+  #      - ./etc:/opt/torscraper/etc:ro
+  #      - ./scripts:/opt/torscraper/scripts:ro
+  #      - ./lib:/opt/torscraper/lib:ro
+  #      - ./web-general:/opt/torscraper/web
+  #    depends_on:
+  #      - db
+  #      - elasticsearch1
+  #      - elasticsearch2
+  #    container_name: "darkweb-search-engine-web-general"
+  #    logging:
+  #      driver: json-file
+  #      options:
+  #        max-size: 2000k
+  #        max-file: '10'
 
+  #  db:
+  #    build: db
+  #    ports:
+  #      - "0.0.0.0:3307:3306"
+  #    volumes:
+  #      - .data/mysqldb:/var/lib/mysql
+  #    container_name: "darkweb-search-engine-db"
+  #    logging:
+  #      driver: json-file
+  #      options:
+  #        max-size: 2000k
+  #        max-file: '10'
 
-
-
-
-
-#  web-general:
-#    build: ./web-general  # Path to the Dockerfile for web-general
-#    restart: always
-#    ports:
-#      - "0.0.0.0:7000:5000"
-#    volumes:
-#      - ./etc:/opt/torscraper/etc:ro
-#      - ./scripts:/opt/torscraper/scripts:ro
-#      - ./lib:/opt/torscraper/lib:ro
-#      - ./web-general:/opt/torscraper/web
-#    depends_on:
-#      - db
-#      - elasticsearch1
-#      - elasticsearch2
-#    container_name: "darkweb-search-engine-web-general"
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: 2000k
-#        max-file: '10'
-
-#  db:
-#    build: db
-#    ports:
-#      - "0.0.0.0:3307:3306"
-#    volumes:
-#      - .data/mysqldb:/var/lib/mysql
-#    container_name: "darkweb-search-engine-db"
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: 2000k
-#        max-file: '10'
-
-#   crawler:
-#     build: .
-#     restart: always
-# #    deploy:
-# #      resources:
-# #        limits:
-# #          cpus: '6'
-# #          memory: 14G
-# #        reservations:
-# #          cpus: '0.6'
-# #          memory: 4G
-#     ports:
-#       - "3128"
-#     depends_on:
-#       - db
-#       - elasticsearch
-#     container_name: "darkweb-search-engine-crawler"
+  #   crawler:
+  #     build: .
+  #     restart: always
+  # #    deploy:
+  # #      resources:
+  # #        limits:
+  # #          cpus: '6'
+  # #          memory: 14G
+  # #        reservations:
+  # #          cpus: '0.6'
+  # #          memory: 4G
+  #     ports:
+  #       - "3128"
+  #     depends_on:
+  #       - db
+  #       - elasticsearch
+  #     container_name: "darkweb-search-engine-crawler"
 
   tor-privoxy0:
     restart: always
@@ -241,7 +242,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy1:
     restart: always
     build: tor-privoxy-scraper
@@ -250,7 +251,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy2:
     restart: always
     build: tor-privoxy-scraper
@@ -259,7 +260,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy3:
     restart: always
     build: tor-privoxy-scraper
@@ -268,7 +269,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy4:
     restart: always
     build: tor-privoxy-scraper
@@ -277,7 +278,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy5:
     restart: always
     build: tor-privoxy-scraper
@@ -286,7 +287,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy6:
     restart: always
     build: tor-privoxy-scraper
@@ -295,7 +296,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy7:
     restart: always
     build: tor-privoxy-scraper
@@ -304,7 +305,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy8:
     restart: always
     build: tor-privoxy-scraper
@@ -313,7 +314,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
   tor-privoxy9:
     restart: always
     build: tor-privoxy-scraper
@@ -322,7 +323,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
 
   tor-privoxy-web:
     restart: always
@@ -335,7 +336,7 @@ services:
       driver: json-file
       options:
         max-size: 2000k
-        max-file: '10'
+        max-file: "10"
 
 networks:
   default:
