--- a/web-general/requirements.txt
+++ b/web-general/requirements.txt
@@ -1,5 +1,5 @@
 app==0.0.1
-attrs
+attrs==21.4.0
 Automat==20.2.0
 base58check==1.0.2
 bcrypt==3.1.7
@@ -15,6 +15,7 @@ chardet==3.0.4
 charset-normalizer==2.0.3
 click==7.1.2
 coinaddr==1.0.1
+coinaddrng==1.0.2
 constantly==15.1.0
 crypto==1.4.1
 cryptography==3.0
@@ -30,7 +31,7 @@ goose3==3.1.6
 htmldate==0.7.3
 hyperlink==20.0.1
 idna==2.10
-incremental
+incremental==22.10.0
 itemadapter==0.1.0
 itemloaders==1.0.2
 itsdangerous==1.1.0
@@ -99,9 +100,9 @@ timeout-decorator==0.4.1
 tqdm==4.61.2
 Twisted==24.3.0
 typer==0.4.0
-typing_extensions
+typing_extensions==4.5.0
 urllib3==1.26.2
 w3lib==1.22.0
 wasabi==0.8.2
 Werkzeug==0.16.0
-zope.interface==5.1.0
+zope.interface==5.4.0
